fix: removes redundant whitespace if player has few stats, prevents repeated hovers
Squashed commit of the following:

commit 3e0ccdebeefcc1018fed6d5070c2239dc7ed5adc
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 30 18:44:45 2019 +0100

    wip: remove career stat section if player has not yet played any games

commit 45722a1531ad59e2d642f104305c13bccdcd0a8a
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 30 18:33:08 2019 +0100

    wip: handle resize if element is in bottom half, prevent double hover

commit 090d96aac96efb53b79e6620f0a51ca9b97e3c47
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 30 16:38:47 2019 +0100

    wip: if resizing stat display, also resize frame container to not interfere with mouse events

commit b9d105f3601f8504c1168b50da114fc48e7f0a4e
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 30 15:12:27 2019 +0100

    wip: resize animation now after all stat rows have been mapped

commit d2d8a8c48f33c1052bd9f9922b3b7a6ce7febb8a
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 30 14:28:30 2019 +0100

    wip: animate stat display to new height if player has too little data to fill it

--- a/view/frame.css
+++ b/view/frame.css
@@ -18,7 +18,7 @@
   width: calc(100vw - 4px);
 }
 
-.reveal-from-top, .reveal-from-bottom {
+.reveal-from-top, .reveal-from-bottom, .resize {
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.25, 0.75, 0.25, 1);
@@ -30,6 +30,10 @@
 
 .reveal-from-bottom {
   animation-name: reveal-from-bottom;
+}
+
+.resize {
+  animation-name: resize;
 }
 
 @keyframes reveal-from-top {
@@ -135,7 +139,7 @@
 #content {
   border-radius: 5px;
   margin-top: 37px;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .sub-heading {
